[b]Version 0.5.61[/b] (not released yet):

(2007-09-19)
 * Fix: Don't try to connect in main.cpp to another running instance if
   the single instance is disabled! That also means that the command line
   option -send-action won't work in that case.


[b]Version 0.5.60[/b]:
 * Updated the Japanese and French translations.

(2007-09-19)
 * Updated the German translation.
 * (Windows) Maybe a fix to avoid the video to pause when entering in 
   fullscreen and the option "Pause when minimized" is enabled. Not tested
   yet.

(2007-09-18)
 * The playlist will be floating as default.
 * (By user request) Added the option "Pause when minimized" in Preferences->
   General. If checked, the current file will be paused when the main window
   is hidden. When the main window is visible again play will resume.
   Currently it has two problems: if the file was already paused before
   hiding, smplayer won't remember it so when the main window is made visible
   the file will be played. And this setting also affects audio files, which
   maybe is not appropriate.
 * Updated the Polish translation.

(2007-09-16)
 * Replaced the QAction's activated() signal with triggered(). Now smplayer
   runs without warnings in kubuntu with Qt 4.3. And I think now the port to
   Qt 4 has really finished.
   Anyway this is a delicated change, a small mistake and something could stop
   working.
 * Updated the Hungarian translation.

(2007-09-15)
 * The script create_deb.sh changes the debian changelog so the SVN revision 
   number is added to the generated *.deb file.
 * Added new option "Channels by default" in Preferences->General->Audio.
 * BTW, now the initial_* options in preferences are stored in its own
   section "[default]" in the config file.

(2007-09-14)
 * Added a small program (getrev) to extract the SVN revision number. Intended
   for Windows, where the script get_svn_revision.sh doesn't work.
 * Compiling as default the old code to resize the main window, as it has been